--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Dinky theme
-description: Dinky is a red hot theme for GitHub Pages.
+title: Manon Réau
+description: Personal Webpage
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-dinky
