--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Manon Réau
-description: Personal Webpage
+description: PhD Student
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-dinky
