--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,7 @@ description: PhD Student
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-dinky
+social-network-links:
+  email: "manon.reau@lecnam.net"
+  twitter: @Manon_Reau
+  linkedin: manon-réau-70456743
