--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Manon Réau
+title: PhD Student in chemoinformatics
 author: Manon Réau
-description: PhD Student
+description: Nuclear receptors, NR-DBIND, Drug Design, CNAM, GBA, Manon Réau, Chemoinformatics, CADD, ISDD, M2ISDD, Caflisch, LBT, MTI, BIRL, SupBiotech, Integration of negative data into benchmarking database,
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-dinky
