--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: PhD Student in chemoinformatics
 author: Manon Réau
-description: Nuclear receptors, NR-DBIND, Drug Design, CNAM, GBA, Manon Réau, Chemoinformatics, CADD, ISDD, M2ISDD, Caflisch, LBT, MTI, BIRL, SupBiotech, Integration of negative data into benchmarking database,
+description: Manon Réau, PhD student in chemoinformatics, CNAM, GBA
 show_downloads: true
 google_analytics: 'UA-129866296-1'
 theme: jekyll-theme-dinky
