--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: PhD Student in chemoinformatics
+title: PhD in chemoinformatics
 author: Manon Réau
-description: Manon Réau, PhD student in chemoinformatics, CNAM, GBA
+description: Manon Réau, PhD in chemoinformatics, CNAM, GBCM
 show_downloads: true
 google_analytics: 'UA-129866296-1'
 theme: jekyll-theme-dinky
